[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/23 sin título_20220604163414.png" type="Texture" id=1]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/4 sin título_20220522133307.png" type="Texture" id=2]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/24 sin título_20220604193606.png" type="Texture" id=3]
[ext_resource path="res://Main Resources/Fuentes/OXYGENE1.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/25 sin título_20220604201449.png" type="Texture" id=5]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/25 sin título_20220604202951.png" type="Texture" id=6]
[ext_resource path="res://Escenas/Interfaces/Menu/Select_battle_UI.gd" type="Script" id=7]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/25 sin título_20220604202905.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 3
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 78, 19 ), Vector2( 78, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tittle:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 222, 0 ), Vector2( 222, 16 ) ]
}

[node name="Select_battle_UI" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="background" type="TextureRect" parent="."]
self_modulate = Color( 0, 0.0392157, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="deco" type="TextureRect" parent="background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -87.0
margin_right = 512.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Isla1" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -434.0
margin_top = -281.0
margin_right = 434.0
margin_bottom = 196.0

[node name="tittle" type="Label" parent="Isla1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -212.0
margin_right = 212.0
margin_bottom = 51.0001
custom_colors/font_color = Color( 1, 0.992157, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -3
custom_constants/shadow_as_outline = 87
custom_fonts/font = SubResource( 3 )
text = "GEOMETRY LAND"
align = 1
valign = 1

[node name="isla_sprite" type="TextureRect" parent="Isla1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -359.0
texture = ExtResource( 3 )

[node name="battle1" type="TextureButton" parent="Isla1"]
margin_left = 218.0
margin_top = 253.0
margin_right = 264.0
margin_bottom = 299.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 8 )
expand = true

[node name="battle2" type="TextureButton" parent="Isla1"]
margin_left = 378.0
margin_top = 277.0
margin_right = 424.0
margin_bottom = 323.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 8 )
expand = true

[node name="battle3" type="TextureButton" parent="Isla1"]
margin_left = 506.0
margin_top = 229.0
margin_right = 552.0
margin_bottom = 275.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 8 )
expand = true

[node name="battle4" type="TextureButton" parent="Isla1"]
margin_left = 610.0
margin_top = 237.0
margin_right = 656.0
margin_bottom = 283.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 8 )
expand = true

[node name="battle5" type="TextureButton" parent="Isla1"]
margin_left = 714.0
margin_top = 229.0
margin_right = 760.0
margin_bottom = 275.0
disabled = true
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 8 )
expand = true

[node name="anim" type="AnimationPlayer" parent="Isla1"]
autoplay = "move"
anims/move = SubResource( 2 )

[connection signal="focus_entered" from="Isla1/battle1" to="." method="_on_battle1_focus_entered"]
[connection signal="pressed" from="Isla1/battle1" to="." method="_on_battle1_pressed"]
[connection signal="focus_entered" from="Isla1/battle2" to="." method="_on_battle2_focus_entered"]
[connection signal="pressed" from="Isla1/battle2" to="." method="_on_battle2_pressed"]
[connection signal="focus_entered" from="Isla1/battle3" to="." method="_on_battle3_focus_entered"]
[connection signal="pressed" from="Isla1/battle3" to="." method="_on_battle3_pressed"]
[connection signal="focus_entered" from="Isla1/battle4" to="." method="_on_battle4_focus_entered"]
[connection signal="pressed" from="Isla1/battle4" to="." method="_on_battle4_pressed"]
[connection signal="focus_entered" from="Isla1/battle5" to="." method="_on_battle5_focus_entered"]
[connection signal="pressed" from="Isla1/battle5" to="." method="_on_battle5_pressed"]
